<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.parse.flushr.CreatePageActivity"
    android:background="#ffffff"
    android:minHeight="60dp"
    android:minWidth="100dp">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <EditText
            android:id="@+id/nameofres"
            android:layout_below="@+id/nametextview"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:padding="1dp"
            android:singleLine="true"
            android:maxLength="80"
            android:maxLines="1"
            android:layout_alignParentLeft="true"
            android:gravity="top|left"
            android:hint="Name"
            />

    </android.support.design.widget.TextInputLayout>



    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Name"-->
        <!--android:id="@+id/nametextview"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:textIsSelectable="false"-->
        <!--android:textSize="30sp"-->
        <!--/>-->





    <TextView
        android:layout_below="@+id/input_layout_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gender"
        android:id="@+id/genderTextView"
        android:textSize="30sp"
        android:layout_alignParentLeft="true"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Male"
        android:id="@+id/checkMale"
        android:checked="false"
        android:layout_alignTop="@+id/checkFemale"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Female"
        android:id="@+id/checkFemale"
        android:checked="false"
        android:layout_below="@+id/genderTextView"
        android:layout_alignRight="@+id/ratingBar"
        android:layout_alignEnd="@+id/ratingBar" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Accessibility"
        android:id="@+id/checkAccess"
        android:checked="false"
        android:layout_below="@+id/checkMale"
        android:drawableLeft="@drawable/ic_accessability_black"
        android:layout_alignParentLeft="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rating"
        android:id="@+id/ratingTextView"
        android:textSize="30sp"
        android:layout_below="@+id/checkAccess"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_below="@+id/ratingTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Description"
        android:id="@+id/textView3"
        android:textSize="30sp"
        android:layout_below="@+id/ratingBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />


    <EditText
        android:id="@+id/commentBox"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:padding="10dp"
        android:inputType="textMultiLine"
        android:maxLength="80"
        android:maxLines="3"
        android:background="@drawable/edittext_border"
        android:gravity="top|left"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/submitButton"
        android:src="@drawable/ic_send_black"
        android:onClick="submit"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/ratingBar"
        android:layout_below="@+id/commentBox"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Transgender"
        android:id="@+id/checkTrans"
        android:layout_below="@+id/checkFemale"
        android:layout_alignLeft="@+id/checkFemale"
        android:layout_alignStart="@+id/checkFemale"
        android:checked="false" />


</RelativeLayout>
